--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hi there!
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Krutifulmen's Site</title>
+ </head>
+ <body>
+  <p><a href="https://krutifulmen.github.io/Cydia/index.html">Cydia Repo</a></p>
+  <p><a href="https://krutifulmen.github.io/App/index.html">App</a></p>
+ </body>
+</html>
