--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Krutifulmen's Site</title>
  </head>
  <body>
+  <p>Hi there!</p>
   <p><a href="https://krutifulmen.github.io/Cydia/index.html">Cydia Repo</a></p>
   <p><a href="https://krutifulmen.github.io/App/index.html">App</a></p>
  </body>
