--- a/App/index.html
+++ b/App/index.html
@@ -1,1 +1,10 @@
-<p><a href="krutifulmen.github.io/App/App.mobileconfig>Install the App</p>
+<!DOCTYPE HTML>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>App</title>
+ </head>
+ <body>
+    <p><a href="krutifulmen.github.io/App/App.mobileconfig>Install the App</p>
+ </body>
+</html>
