--- a/App/index.html
+++ b/App/index.html
@@ -5,6 +5,7 @@
   <title>App</title>
  </head>
  <body>
+    <p>Install here</p>
     <p><a href="https://krutifulmen.github.io/App/App.mobileconfig">Install the App</a></p>
  </body>
 </html>
