--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
   <p>Hi there!</p>
-  <p><a href="https://krutifulmen.github.io/Cydia/index.html">Cydia Repo</a></p>
+  <p><a href="https://krutifulmen.github.io/repo/index.html">Cydia Repo</a></p>
   <p><a href="https://krutifulmen.github.io/App/index.html">App</a></p>
  </body>
 </html>
