--- a/repo/index.html
+++ b/repo/index.html
@@ -6,6 +6,6 @@
 <body>
 	<h1>Hello World!</h1>
 	<p>This is a Cydia repo!</p>
-	<p><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://krutifulmen.github.io/Cydia/">Add to Cydia</a></p>
+	<p><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://krutifulmen.github.io/repo/">Add to Cydia</a></p>
 </body>
 </html>
