--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="TheTechBoy's Site" property="og:title" />
-    <meta content="Welcome to TTB's Official Site!" property="og:description" />
+    <meta content="Welcome to Krutfulmen's Official Site!" property="og:description" />
     <meta content="https://thetechboy.net/#" property="og:url" />
     <meta content="https://thetechboy.net/assets/website/icon.png" property="og:image" />
     <meta content="#2F3BA4" data-react-helmet="true" name="theme-color" />
-    <title>TheTechBoy's site</title>
+    <title>Krutifulmen's site</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
@@ -20,38 +20,34 @@
             <img id="profile-image" src="assets/pfp/ttbminimalismgold.png" alt="Profile Image">
         </div>
         <div id="header-text">
-            <h1>TTB</h1>
+            <h1>Krutifulmen</h1>
             <p>Welcome to my official website!</p>
         </div>
-        <a href="mailto:ttb@thetechboy.net" class="contact-button">
+        <a href="mailto:krutifulmen@icloud.com" class="contact-button">
             <i class="fas fa-envelope"></i> Contact
         </a>
     </header>
     <div class="content">
         <h2>Hello!</h2>
-        <p>I'm The Tech Boy, shortened for TTB. I love to make tech content and to experiment with iPhones. Links are below:</p>
+        <p>I'm Krutifulmen aka AvocadoTech, this is my site! All links are below:</p>
         <div class="buttons">
-            <a href="https://tiktok.com/@thetechboy_" class="button tiktok" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
-            <a href="https://youtube.com/@TheTechBoyReal" class="button youtube" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
-            <a href="https://discord.gg/dH56KN4HZ5" class="button discord" target="_blank"><i class="fab fa-discord"></i> Discord</a>
-            <a href="https://wiki.thetechboy.net" class="button wiki" target="_blank"><i class="fa-brands fa-wikipedia-w"></i> TechTok Wiki</a>
-            <a href="https://www.roblox.com/groups/33535480/TTBs-Basement#!/about" class="button roblox" target="_blank"><i class="fas fa-gamepad"></i> Roblox Group</a>
+            <a href="https://tiktok.com/@avocado.tech" class="button tiktok" target="_blank"><i class="fab fa-tiktok"></i> TikTok</a>
+            <a href="https://t.me/AvocadoTech" class="button telegram" target="_blank"><i class="fab fa-telegram"></i> Telegram</a>
+            <a href="https://t.me/Krutifulmen" class="button telegram2" target="_blank"><i class="fab fa-telegram"></i> Telegram 2</a>
+            <a href="https://krutifulmen.github.io/repo" class="button repo" target="_blank"><i class="fab fa-internet"></i> Add my repo!</a>
         </div>
         <div class="extras">
             <h3>Extras</h3>
             <p>Here's some extra stuff if you need it:</p>
             <div class="buttons">
-                <a href="https://imomobile.co.uk" class="button e-waste" target="_blank"><i class="fas fa-recycle"></i> Hall of E-Waste</a>
-                <a href="subpages/brainrot/index.html" class="button brainrot" target="_blank"><i class="fa-solid fa-child"></i> Gen Alpha brainrot</a>
-                <a href="subpages/activation/index.html" class="button windows" target="_blank"><i class="fab fa-windows"></i> Windows Activation</a>
-                <a href="subpages/pfp/index.html" class="button pfptimeline" target="_blank"><i class="fa-solid fa-user"></i> PFP Timeline</a>
-                <a href="subpages/devices/index.html" class="button devices" target="_blank"><i class="fa-solid fa-mobile-screen-button"></i> Device Collection</a>
-                <a href="https://github.com/thetechboy69/thetechboy" class="button github" target="_blank"><i class="fa-brands fa-github"></i> Source Code</a>
+                <a href="https://krutifulmen.github.io/pfp/index.html" class="button pfptimeline" target="_blank"><i class="fa-solid fa-user"></i> PFP Timeline</a>
+                <a href="https://krutifulmen.github.io/devices/index.html" class="button devices" target="_blank"><i class="fa-solid fa-mobile-screen-button"></i> Device Collection</a>
+                <a href="https://github.com/krutifulmen" class="button github" target="_blank"><i class="fa-brands fa-github"></i> My GitHub</a>
             </div>
         </div>
 
         <div class="made-with-text">
-            <p>Made with ❤️ by <img src="assets/pfp/ttbminimalism.png" alt="ttb" class="avatar-image"> TTB, <img src="assets/website/szymcioya.jpeg" alt="szymcioya" class="avatar-image"> SzymcioYa, <img src="assets/website/pingusurmars.jpeg" alt="pingusurmars" class="avatar-image"> PinguSurMars and <img src="assets/website/hexp.png" alt="hexp" class="avatar-image"> HeXp</p>
+            <p>Made by <img src="assets/pfp/ttbminimalism.png" alt="ttb" class="avatar-image"> TTB and changed by me. <img src="assets/website/krutifulmen.png" alt="me" class="avatar-image"></p>
         </div>
 
         <div class="feedback-button-container">
