--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="TheTechBoy's Site" property="og:title" />
+    <meta content="Krutifulmen's Site" property="og:title" />
     <meta content="Welcome to Krutfulmen's Official Site!" property="og:description" />
     <meta content="https://thetechboy.net/#" property="og:url" />
     <meta content="https://thetechboy.net/assets/website/icon.png" property="og:image" />
