--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="profile-image-container">
-            <img id="profile-image" src="assets/pfp/ttbminimalismgold.png" alt="Profile Image">
+            <img id="profile-image" src="assets/pfp/krutifulmen.png" alt="Profile Image">
         </div>
         <div id="header-text">
             <h1>Krutifulmen</h1>
