--- a/repo/index.html
+++ b/repo/index.html
@@ -9,3 +9,32 @@
 	<p><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://krutifulmen.github.io/repo/">Add to Cydia</a></p>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Krutifulmen's Repo!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="depictions/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+	<h1><img src="CydiaIcon.png"> Krutifulmen's repo</h1>
+</div>
+
+<div class="container">
+	<div class="card">
+		<div class="card-body">
+			<p><span class="text-primary"><b>Krutifulmen's repo</span></b> is a iOS Jailbreak repository, where all tweaks that you need!.</p>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://krutifulmen.github.io/repo/">Add to Cydia</a>
+			<a class="btn btn-sm btn-primary" href="sileo://source/https://krutifulmen.github.io/repo/">Add to Sileo</a>
+			<a class="btn btn-sm btn-primary" href="zebra://url/?source=https://krutifulmen.github.io/repo/">Add to Zebra</a>
+		</div>
+	</div>
+</div>
+</body>
+</html>
