--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Krutifulmen's Site</title>
+</head>
+<body>
+  <h1>Krutifulmen's site</h1>
+  <p>Welcome!</p>
+  </br>
+  <p><a href="https://krutifulmen.github.io/repo">iOS Jailbreak Repo</a></p>
+</body>
+</html>
