--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
-<!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Krutifulmen's Site</title>
+  <title>Kruitfulmen's Site!</title>
 </head>
-<body>
-  <h1>Krutifulmen's site</h1>
-  <p>Welcome!</p>
-  </br>
-  <p><a href="https://krutifulmen.github.io/repo">iOS Jailbreak Repo</a></p>
+<body style="background-image: url('content/stars_background.png');">
+    <style>
+        table, th, td 
+        {
+            border: 1px solid black;
+            border-color: white;
+        }
+    </style>
+    <center>
+        <img src="content/cooltext463189178267060.gif"></img>
+        <p>
+        <hr>
+        <img src="content/underConstruction.png"></img>
+        <p>
+        <hr>  
+        <table style="max-width:1200px;">
+            <tr><td>
+        <font id="mainText" size="5" color=yellow> Hello!!! I am Krutifulmen! Welcome to my site, its cool site, I have many things here!!1 I know HTML and Python. <br>I love programming, also, I know English and Russian language. I live in Russia and my name is Dmitry. I really love technology, this is my favourite hobby. soo, I made this site. I didn't find any free hosting, andd choose GitHub Pages. I spend a lot of time on this site! I hope you like this site. It open source, so you can find it on my github. You can see my projects lower. Soo, explore my site! :)</font>
+        </td></tr>
+        </table>
+             <p><img src="content/globe.gif"></img><font color=white size = 10>My projects:</font><img src="content/globe.gif"></img></p>        
+        <table style="max-width:1200px;background-color:gray;">
+            <tr><td>
+        <font i<font id="comment1" size="4" color=white>This Site<br>:)<p></p>so the first project is this site<br>I wrote it myself. I hope you like it :)</font>
+        </td></tr>
+        <tr><td>
+            <font i<font id="comment2" size="4" color=white>iOS Jailbreak Repo<br>:)<p></p>if your iDevice is jailbroken you can use my repo!<br>there are many tweaks, that you need! <a id ="scamLink" href="https://krutifulmen.github.io/repo" target=_blank>clcik to add!</a></font>
+            </td></tr>
+        </table>
+        <p><img src="data/underConstruction.png"></img></p>
+        <hr>
+        <table style="max-width:1200px;">
+            <tr><td>
+                <font i<font id="footer" size="4" color=white> So i like to create my own website, but now its only test. so i will wrote here if i have new website. see you again later!</font>
+        </td></tr>
+        </table>
+        
+        <div style="height:600px"></div>
+    </center>
 </body>
 </html>
