--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <font i<font id="comment2" size="4" color=white>iOS Jailbreak Repo<br>:)<p></p>if your iDevice is jailbroken you can use my repo!<br>there are many tweaks, that you need! <a id ="scamLink" href="https://krutifulmen.github.io/repo" target=_blank>clcik to add!</a></font>
             </td></tr>
         </table>
-        <p><img src="data/underConstruction.png"></img></p>
+        <p><img src="content/underConstruction.png"></img></p>
         <hr>
         <table style="max-width:1200px;">
             <tr><td>
