--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <tr><td>
             <font i<font id="comment2" size="4" color=white>iOS Jailbreak Repo<br>:)<p></p>if your iDevice is jailbroken you can use my repo!<br>there are many tweaks, that you need! <a id ="scamLink" href="https://krutifulmen.github.io/repo" target=_blank>clcik to add!</a></font>
             </td></tr>
+        <tr><td>
+            <font i<font id="comment3" size="4" color=white>Cat Gallery<br>:)<p></p>There are many cool and beautiful cats!<br>Check it out:<a id ="scamLink" href="https://krutifulmen.github.io/cat_gallery/" target=_blank>yo click me to see cats</a></font>
+            </td></tr>
         </table>
         <p><img src="content/underConstruction.png"></img></p>
         <hr>
