--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Kruitfulmen's Site!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">.
 </head>
 <body style="background-image: url('content/stars_background.png');">
     <style>
