--- a/pranks/ahah/index.html
+++ b/pranks/ahah/index.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <div class="text" id="statusText">нажми чтобы начать</div>
+    <div class="text" id="statusText">нажми на меня :)</div>
 
     <script>
         const audio = new Audio('sound.mp3');
