--- a/pranks/ahah/index.html
+++ b/pranks/ahah/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sound + Text</title>
+    <title>Click Sound</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
