--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <tr><td>
             <font i<font id="comment3" size="4" color=white>Cat Gallery<br>:)<p></p>There are many cool and beautiful cats!<br>Check it out:<a id ="scamLink" href="https://krutifulmen.github.io/cat_gallery/" target=_blank>yo click me to see cats</a></font>
             </td></tr>
+        <tr><td>
+            <font i<font id="comment4" size="4" color=white>Pranks<br>:)<p></p>Just a pranks<br>Check it:<a id ="scamLink" href="https://krutifulmen.github.io/pranks/" target=_blank> click here</a></font>
+            </td></tr>
+        <tr><td>
+            <font i<font id="comment5" size="4" color=white>AI<br>:)<p></p>AvocadoAI<br>All here:<a id ="scamLink" href="https://krutifulmen.github.io/ai/" target=_blank>here</a></font>
+            </td></tr>
         </table>
         <p><img src="content/underConstruction.png"></img></p>
         <hr>
